@@ -1,19 +1,12 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-AUX authlogic-2.1.6-quote-email.patch 1451 RMD160 4a1e51da76279cf5510950b587204debb53a81fc SHA1 2fd8ed2c280be561b76b8fc9edb33303291009a9 SHA256 1ee455c79d5c6332f64268b058ad327da2d1c2a14fa44e4bba11338c5ba77c57
-AUX authlogic-2.1.6-rails3-1.patch 739 RMD160 2812814cffc3fd55ccb80c9b0569bbb04fe9000d SHA1 6d45d6cedb1872be88598d70487c8e62ebc0c45a SHA256 359fe5d2e1c81d21c902629d4366ca9721f5b5299a291a6b9589180e65802c8c
-AUX authlogic-2.1.6-rails3-2.patch 744 RMD160 7410887e4da9f1e83619253fb786088dfca134cb SHA1 0907ef874f4a025617989ea89ac144468fa76269 SHA256 6763c2113dda04680a99fd6d99635ded66463570c6d1c275b1b7cd4678b0ba54
 DIST authlogic-2.1.6.gem 74752 RMD160 f9c081d23c363766bf22870521d32b368ea3b51b SHA1 499827ac35d5ae925025224ce42a9787d07efa65 SHA256 af9cc2b76501338ac1cfa43104e80d9eb863e2c1c2699c8fbfa8a1197f0edb17
 DIST authlogic-3.1.0.gem 68608 RMD160 dc26e2eabf247955e2b6fa55596a1ced8090d22b SHA1 4e91cbd87f087dd6c0630c08a55c3f0276039b60 SHA256 9e2545c9b3c529f34d5c595bced3e439338834f67be4e24dc8aa5d631c14f5ee
-EBUILD authlogic-2.1.6-r2.ebuild 864 RMD160 8fa7dea5fbd0b15c9b77a1c1030e75e4f9c2b239 SHA1 1e74f5d8581308ca67492169135c22748df87fc3 SHA256 825cca169b77b0ca117c19066494a30dc795c91bae734cc76424d2e64ae843fc
-EBUILD authlogic-3.1.0.ebuild 787 RMD160 a44486892cdceca2ce6ba67bf192228671a315ea SHA1 02bb3dbb8727a36859bf712a595a9539e65f0110 SHA256 1269bf9efc01ce047b54ff4bf9fa8ae4a5ff22099550afd97af609bded7a84b6
-MISC ChangeLog 2558 RMD160 2c1805ade8fdfb20351f0911e61b470e9167a5ac SHA1 3de2fda4006e5dba07345fc5951bdb7c071294d2 SHA256 db334a012263c1815198f8a5d5dfadb1a46645658faefee8bf3c17a69b034c23
-MISC metadata.xml 201 RMD160 bbf7920d9809941fb024d20016dbe2fb9f15ff97 SHA1 e629d21795e99a77bd0a6aded1a153fd12d5b2c5 SHA256 c90b12c6600840878686d4544dbc51d97b0715add76b40d9400415cdef6324ad
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk7PcmsACgkQiIP6VqMIqNdoOQD8Cv47qFL2FPKsxrFfwtCfN/6V
-fSImHyzbZPPfAqx43IUA/jlm5sduZO/pIe8bw6uof1pxbmF2ATaBCt5JqjAZtDa/
-=a/ES
+iF4EAREIAAYFAk+D0gsACgkQiIP6VqMIqNcKXAD/V3KommYLzR+Xfq/paLoWylgC
+7RiiW4pYpwSlI2yjoVAA/RVb6OnsXxAVygEp5V62SSD8J+vZN4QDbChNGZKt2S04
+=psmA
 -----END PGP SIGNATURE-----
