@@ -1,10 +1,10 @@
-# Copyright 1999-2011 Gentoo Foundation
+# Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header:  $
 
 EAPI=2
 
-USE_RUBY="ruby18 ree18"
+USE_RUBY="ruby18 ruby19 ree18"
 
 RUBY_FAKEGEM_TASK_DOC=""
 RUBY_FAKEGEM_EXTRADOC="README.rdoc"
@@ -17,14 +17,18 @@ DESCRIPTION="A clean, simple, and unobtrusive ruby authentication solution."
 HOMEPAGE="http://authlogic.rubyforge.org/"
 LICENSE="Ruby"
 
-KEYWORDS="~amd64 ~x86"
+KEYWORDS="~amd64"
 SLOT="3"
 IUSE=""
 
 ruby_add_rdepend ">=dev-ruby/activerecord-3.0.7"
-ruby_add_bdepend "test? ( dev-ruby/bcrypt-ruby dev-ruby/ruby-debug dev-ruby/sqlite3-ruby )"
+ruby_add_bdepend "test? ( dev-ruby/bcrypt-ruby dev-ruby/sqlite3-ruby )"
+
+all_ruby_prepare() {
+	sed -i -e '/ruby-debug/d' test/test_helper.rb || die
+}
 
 # This approach makes it possible to ignore jeweler.
 each_ruby_test() {
-	${RUBY} -Ilib:test -rtest/unit -e "Dir['test/**/*_test.rb'].each{|f| require f}" || die
+	${RUBY} -Ilib:test:. -rtest/unit -e "Dir['test/**/*_test.rb'].each{|f| require f}" || die
 }
